error.log
Traceback (most recent call last):
  File "C:\Users\Windows\Desktop\novus\depilarte\tmp_test.py", line 3, in <module>
    import backend.main
  File "C:\Users\Windows\Desktop\novus\depilarte\backend\main.py", line 40, in <module>
    from backend.modules.dashboard.router import router as dashboard_router
  File "C:\Users\Windows\Desktop\novus\depilarte\backend\modules\dashboard\router.py", line 302
    })
    ^
SyntaxError: closing parenthesis '}' does not match opening parenthesis '(' on line 68
